--- a/style.css
+++ b/style.css
@@ -14,10 +14,10 @@ html,
 body {
   height: 100vh;
   width: 100%;
-  background-color: black;
+  /* background-color: black; */
 }
 #intro {
-  background-color: black;
+  /* background-color: black; */
   display: flex;
   flex-direction: column;
   align-items: center;
