--- a/responsive.css
+++ b/responsive.css
@@ -60,8 +60,8 @@
 
 #bg {
   width: 100%;
-  height: 100%;
-  --color: rgba(137, 137, 137, 0.3);
+  height: fit-content;
+  --color: rgba(107, 107, 107, 0.3);
   background-color: black;
   background-image: linear-gradient(
       0deg,
