--- a/style.css
+++ b/style.css
@@ -16,6 +16,17 @@ body {
   width: 100%;
   /* background-color: black; */
 }
+#minicircle {
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  background-color: white;
+  opacity: 0.6;
+  position: absolute;
+  z-index: 999;
+  transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.4s;
+  z-index: 0;
+}
 #intro {
   /* background-color: black; */
   display: flex;
