--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   height: 100vh;
   width: 100%;
   /* background-color: black; */
+  overflow-x: hidden;
 }
 #minicircle {
   height: 15px;
@@ -26,6 +27,17 @@ body {
   z-index: 999;
   transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.4s;
   z-index: 0;
+}
+#cat {
+  display: flex;
+  position: relative;
+}
+lottie-player {
+  height: 200px;
+  width: 200px;
+  position: absolute;
+  top: -88px;
+  right: -62px;
 }
 #intro {
   /* background-color: black; */
